Initial Navbar Test
Created a simple navbar.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-        <!-- Your website header content goes here (e.g., navigation menu) -->
+        <nav>
+            <ul class="navbar">
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="locations.html">Locations</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
