--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Titan Wings</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Add any additional meta tags, CSS or font imports here -->
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="navbar">
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="locations.html">Locations</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+        <div class="logo">
+            <a href="#">
+                <img src="img/logo.png" alt="">
+            </a>
+        </div>
+
+        <nav class="nav-bar">
+            <ul>
+                <li>
+                    <a href="menu.html" class="active">Menu</a>
+                </li>
+                <li>
+                    <a href="locations.html" class="active">Locations</a>
+                </li>
+                <li>
+                    <a href="contact.html" class="active">Contact Us</a>
+                </li>
             </ul>
         </nav>
     </header>
-
-    <main>
-        <!-- Main content of your website goes here -->
-    </main>
-
-    <footer>
-        <!-- Your website footer content goes here (e.g., contact information) -->
-    </footer>
-
-    <script src="js/script.js"></script>
-    <!-- Add any additional JavaScript imports or inline scripts here -->
 </body>
 </html>
