--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
                 <img src="img/logo.png" alt="">
-            </a>
+            </a>a
         </div>
 
         <nav class="nav-bar">
@@ -27,8 +28,36 @@
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
                 </li>
+                <li>
+                    <a href="order.html" class="active">Order Now</a>
+                </li>
             </ul>
         </nav>
     </header>
+
+    <section id="welcome">
+        <h1>Welcome to Tech Titan Wings</h1>
+        <p>Discover the Best Wings in Town</p>
+        <a href="menu.html" class="cta-button">View Menu</a>
+    </section>
+
+    <section id="about-us">
+        <h2>About Us</h2>
+        <p>At Tech Titan Wings, we are passionate about serving the most delicious and mouthwatering wings in the city. 
+            Our secret recipes and high-quality ingredients make our wings a must-try experience. 
+            Whether you prefer spicy or mild, boneless or traditional, we have the perfect wing for you. 
+            Visit us today and satisfy your wing cravings!
+        </p>
+    </section>
+
+    <section id="contact-info">
+        <footer>
+            <h2>Contact Information</h2>
+            <p>Address: 123 Main Street, City, State, ZIP</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>Email: info@techtitanwings.com</p>
+        </footer>
+    </section>
+
 </body>
 </html>
