--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,9 @@
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
                 </li>
+                <li>
+                    <a href="order.html" class="active">Order Now</a>
+                </li>
             </ul>
         </nav>
     </header>
