--- a/index.html
+++ b/index.html
@@ -35,29 +35,29 @@
         </nav>
     </header>
 
-    <section id="welcome">
+    <div id="welcome">
         <h1>Welcome to Tech Titan Wings</h1>
         <p>Discover the Best Wings in Town</p>
-        <a href="menu.html" class="cta-button">View Menu</a>
-    </section>
+        <a href="menu.html" class="button">View Menu</a>
+    </div>
 
-    <section id="about-us">
+    <div id="about-us">
         <h2>About Us</h2>
         <p>At Tech Titan Wings, we are passionate about serving the most delicious and mouthwatering wings in the city. 
             Our secret recipes and high-quality ingredients make our wings a must-try experience. 
             Whether you prefer spicy or mild, boneless or traditional, we have the perfect wing for you. 
             Visit us today and satisfy your wing cravings!
         </p>
-    </section>
+    </div>
 
-    <section id="contact-info">
+    <div id="contact-info">
         <footer>
             <h2>Contact Information</h2>
-            <p>Address: 123 Main Street, City, State, ZIP</p>
-            <p>Phone: (123) 456-7890</p>
-            <p>Email: info@techtitanwings.com</p>
+            <p>Address: 308 Negra Arroyo Lane, Alberquerque</p>
+            <p>Phone: (337) 987-3333</p>
+            <p>Email: winglover@techtitanwings.com</p>
         </footer>
-    </section>
+    </div>
 
 </body>
 </html>
