Navbar, Location, and Homepage updated

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,14 @@
                 <li>
                     <a href="order.html" class="active">Order Now</a>
                 </li>
+                <li>
+                    <div class="shopping-bag">
+                        <a href="#">
+                            <img src="img/shopping_bag.png" alt="">
+                        </a>
+                    </div>
+
+                </li>
             </ul>
         </nav>
     </header>
