--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <li>
                     <a href="order.html" class="active">Order Now</a>
                 </li>
+                <li>
+                    <div class="shopping-bag">
+                        <a href="#">
+                            <img src="img/shopping_bag.png" alt="">
+                        </a>
+                    </div>
+
+                </li>
             </ul>
         </nav>
     </header>
@@ -45,9 +53,9 @@
 
     <div id="about-us">
         <h2>About Us</h2>
-        <p>At Tech Titan Wings, we are passionate about serving the most delicious and mouthwatering wings in the city. 
-            Our secret recipes and high-quality ingredients make our wings a must-try experience. 
-            Whether you prefer spicy or mild, boneless or traditional, we have the perfect wing for you. 
+        <p>At Tech Titan Wings, we are passionate about serving the most delicious and mouthwatering wings in the city.
+            Our secret recipes and high-quality ingredients make our wings a must-try experience.
+            Whether you prefer spicy or mild, boneless or traditional, we have the perfect wing for you.
             Visit us today and satisfy your wing cravings!
         </p>
     </div>
@@ -60,6 +68,8 @@
             <p>Email: winglover@techtitanwings.com</p>
         </footer>
     </div>
+
+
 
 </body>
 
