--- a/locations.html
+++ b/locations.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <div class="shopping-bag">
-                        <a href="#">
+                        <a href="CartPage.html">
                             <img src="img/shopping_bag.png" alt="">
                         </a>
                     </div>
