--- a/order.html
+++ b/order.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -29,7 +31,7 @@
                 </li>
                 <li>
                     <div class="shopping-bag">
-                        <a href="#">
+                        <a href="CartPage.html">
                             <img src="img/shopping_bag.png" alt="">
                         </a>
                     </div>
@@ -39,4 +41,5 @@
         </nav>
     </header>
 </body>
+
 </html>
