--- a/CartPage.html
+++ b/CartPage.html
@@ -42,77 +42,83 @@
     </header>
 
     <div class="small-container cart-page">
+        <form action="" method="post">
 
-        <table>
-            <tr id="firstTblRow">
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Subtotal</th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="img/BBQWings.jpg" alt="">
-                        <div>
-                            <p>BBQ Wings</p>
-                            <small>Price: $8.99</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1" min="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="img/buffalo.jpg" alt="">
-                        <div>
-                            <p>Buffalo Wings</p>
-                            <small>Price: $8.99</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1" min="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="img/GarlicParmesean.jpg" alt="">
-                        <div>
-                            <p>Garlic Parmesean Wings</p>
-                            <small>Price: $8.99</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1" min="1"></td>
-                <td>$50.00</td>
-            </tr>
-        </table>
-
-        <div class="total-price">
-            <table>
-                <tr>
-                    <td id="subtotal">Subtotal</td>
-                    <td>$200.00</td>
+            <table id="cart">
+                <tr id="firstTblRow">
+                    <th class="cartHeader">Product</th>
+                    <th class="cartHeader">Quantity</th>
+                    <th class="cartHeader">Subtotal</th>
                 </tr>
                 <tr>
-                    <td id="tax">Tax</td>
-                    <td>$20.00</td>
+                    <td>
+                        <div class="cart-info">
+                            <img src="img/BBQWings.jpg" alt="">
+                            <div>
+                                <p>BBQ Wings</p>
+                                <small>Price: $8.99</small>
+                                <br>
+                                <a href="">Remove</a>
+                            </div>
+                        </div>
+                    </td>
+                    <td><input type="number" value="1" min="1"></td>
+                    <td class="itemSubTotal">$50.00</td>
                 </tr>
                 <tr>
-                    <td id="total">Total</td>
-                    <td>$220.00</td>
+                    <td>
+                        <div class="cart-info">
+                            <img src="img/buffalo.jpg" alt="">
+                            <div>
+                                <p>Buffalo Wings</p>
+                                <small>Price: $8.99</small>
+                                <br>
+                                <a href="">Remove</a>
+                            </div>
+                        </div>
+                    </td>
+                    <td><input type="number" value="1" min="1"></td>
+                    <td class="itemSubTotal">$50.00</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="cart-info">
+                            <img src="img/GarlicParmesean.jpg" alt="">
+                            <div>
+                                <p>Garlic Parmesean Wings</p>
+                                <small>Price: $8.99</small>
+                                <br>
+                                <a href="">Remove</a>
+                            </div>
+                        </div>
+                    </td>
+                    <td><input type="number" value="1" min="1"></td>
+                    <td class="itemSubTotal">$50.00</td>
                 </tr>
             </table>
-        </div>
 
+            <div class="total-price">
+                <table>
+                    <tr>
+                        <td id="subtotal" class="finalTotal">Subtotal</td>
+                        <td class="finalTotal">$200.00</td>
+                    </tr>
+                    <tr>
+                        <td id="tax" class="finalTotal">Tax</td>
+                        <td class="finalTotal">$20.00</td>
+                    </tr>
+                    <tr>
+                        <td id="total" class="finalTotal">Total</td>
+                        <td class="finalTotal">$220.00</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div id="checkoutBtn">
+                <button>Checkout</button>
+            </div>
+
+        </form>
     </div>
 </body>
 
