added contact us page

--- a/menu.html
+++ b/menu.html
@@ -40,6 +40,15 @@
             </ul>
         </nav>
     </header>
+
+    <div id="contact-info">
+        <footer>
+            <h2>Contact Information</h2>
+            <p>Address: 308 Negra Arroyo Lane, Alberquerque</p>
+            <p>Phone: (337) 987-3333</p>
+            <p>Email: winglover@techtitanwings.com</p>
+        </footer>
+    </div>
 </body>
 
 </html>
