--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,11 +36,42 @@
                             <img src="img/shopping_bag.png" alt="">
                         </a>
                     </div>
-
                 </li>
             </ul>
         </nav>
     </header>
+
+    <div id="contact-header">
+        <h1>Let Us Know What You Think!</h1>
+
+        <div class="review-container">
+            <div class="review-form">
+                <h2>Send us a Review</h2>
+                <form action="submit-review.php" method="post">
+                    <textarea name="review" placeholder="Write your review" required></textarea>
+                    <input type="submit" value="Submit Review">
+                </form>
+            </div>
+        </div>
+
+        <div class="newsletter-container">
+            <div class="newsletter-form">
+                <h2>Subscribe to our Newsletter</h2>
+                <form action="subscribe.php" method="post">
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+
+        <div id="contact-info">
+            <footer>
+                <h2>Contact Information</h2>
+                <p>Address: 308 Negra Arroyo Lane, Alberquerque</p>
+                <p>Phone: (337) 987-3333</p>
+                <p>Email: winglover@techtitanwings.com</p>
+            </footer>
+        </div>
 </body>
 
 </html>
