--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
         </footer>
     </div>
 
-
+    <script>
+        const viewMenuButton = document.querySelector('.button');
+    
+        viewMenuButton.addEventListener('mouseover', function() {
+            viewMenuButton.classList.add('flame-animation');
+        });
+    
+        viewMenuButton.addEventListener('mouseout', function() {
+            viewMenuButton.classList.remove('flame-animation');
+        });
+    </script>
 
 </body>
 
