Added further comments

--- a/locations.html
+++ b/locations.html
@@ -5,47 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Titan Wings</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+    <link rel="stylesheet" href="css/style.css"> <!-- Link CSS stylesheet -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- Link to Google Fonts for font styling -->
 </head>
 
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo.png" alt=""> <!-- Logo image with a link to the homepage -->
             </a>
         </div>
-
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="menu.html" class="active">Menu</a>
+                    <a href="menu.html" class="active">Menu</a> <!-- Menu link with "active" class for styling -->
                 </li>
                 <li>
                     <a href="locations.html" class="active">Locations</a>
+                    <!-- Locations link with "active" class for styling -->
                 </li>
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
+                    <!-- Contact Us link with "active" class for styling -->
                 </li>
                 <li>
                     <div class="shopping-bag">
                         <a href="CartPage.html">
                             <img src="img/shopping_bag.png" alt="">
+                            <!-- Shopping bag icon with a link to the shopping cart page -->
                         </a>
                     </div>
-
                 </li>
             </ul>
         </nav>
     </header>
 
-
     <div class="location-group">
-
         <h1>Our Locations</h1>
 
+        <!-- Location information for each branch -->
         <div class="location">
             <h2>Louisiana</h2>
             <p>454 Washburn Street<br>Baton Rouge, LA 70802<br>Phone: (225) 413-1639</p>
@@ -73,6 +73,8 @@
 
     <div class="hours-table">
         <h1>Store Hours</h1>
+
+        <!-- Table displaying store hours -->
         <table>
             <tr>
                 <th>Day</th>
