--- a/order.html
+++ b/order.html
@@ -5,37 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Titan Wings</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css"> <!-- Link CSS stylesheet -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- Link to Google Fonts for font styling -->
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="#">
-                <img src="img/logo.png" alt="">
+            <a href="index.html">
+                <img src="img/logo.png" alt=""> <!-- Logo image with a link to the homepage -->
             </a>
         </div>
-
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="menu.html" class="active">Menu</a>
+                    <a href="menu.html" class="active">Menu</a> <!-- Menu link with "active" class for styling -->
                 </li>
                 <li>
                     <a href="locations.html" class="active">Locations</a>
+                    <!-- Locations link with "active" class for styling -->
                 </li>
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
+                    <!-- Contact Us link with "active" class for styling -->
                 </li>
                 <li>
                     <div class="shopping-bag">
                         <a href="CartPage.html">
                             <img src="img/shopping_bag.png" alt="">
+                            <!-- Shopping bag icon with a link to the shopping cart page -->
                         </a>
                     </div>
-
                 </li>
             </ul>
         </nav>
