adding comments to css and html menu

--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Links to css and js -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="css/Menu.css">
 </head>
-
+<!-- onload to start localstorage as soon as page loads -->
 <body onload="setLocalStorage()">
     <header>
         <div class="logo">
@@ -18,7 +18,7 @@
                 <img src="img/logo.png" alt="">
             </a>
         </div>
-
+        <!-- Code to link the Navigation Bar -->
         <nav class="nav-bar">
             <ul>
                 <li>
