--- a/CartPage.html
+++ b/CartPage.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#">
+            <a href="index.html">
                 <img src="img/logo.png" alt="">
             </a>
         </div>
@@ -67,7 +67,7 @@
                         </div>
                     </td>
                     <td><input type="number" value="1" min="1"></td>
-                    <td class="itemSubTotal">$50.00</td>
+                    <td class="itemSubTotal">$8.99</td>
                 </tr>
                 <tr>
                     <td>
@@ -82,7 +82,7 @@
                         </div>
                     </td>
                     <td><input type="number" value="1" min="1"></td>
-                    <td class="itemSubTotal">$50.00</td>
+                    <td class="itemSubTotal">$8.99</td>
                 </tr>
                 <tr>
                     <td>
@@ -97,7 +97,7 @@
                         </div>
                     </td>
                     <td><input type="number" value="1" min="1"></td>
-                    <td class="itemSubTotal">$50.00</td>
+                    <td class="itemSubTotal">$8.99</td>
                 </tr>
             </table>
 
@@ -106,15 +106,15 @@
                 <table>
                     <tr>
                         <td id="subtotal" class="finalTotal">Subtotal</td>
-                        <td class="finalTotal">$200.00</td>
+                        <td class="finalTotal">$26.97</td>
                     </tr>
                     <tr>
                         <td id="tax" class="finalTotal">Tax</td>
-                        <td class="finalTotal">$20.00</td>
+                        <td class="finalTotal">$2.75</td>
                     </tr>
                     <tr>
                         <td id="total" class="finalTotal">Total</td>
-                        <td class="finalTotal">$220.00</td>
+                        <td class="finalTotal">$29.72</td>
                     </tr>
                 </table>
             </div>
