--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Titan Wings</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Link CSS stylesheet -->
+    <link rel="stylesheet" href="css/Home.css"> <!-- Link CSS stylesheet -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <!-- Link to Google Fonts for font styling -->
 </head>
