Removed tables from locations page

--- a/locations.html
+++ b/locations.html
@@ -71,53 +71,38 @@
         </div>
     </div>
 
-    <div class="hours-table">
+    <div class="hours-container">
         <h1>Store Hours</h1>
-
-        <!-- Table displaying store hours -->
-        <table>
-            <tr>
-                <th>Day</th>
-                <th>Open</th>
-                <th>Close</th>
-            </tr>
-            <tr>
-                <td>Monday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Tuesday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Wednesday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Thursday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Friday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Saturday</td>
-                <td>10:45 AM</td>
-                <td>12:00 AM</td>
-            </tr>
-            <tr>
-                <td>Sunday</td>
-                <td>Closed</td>
-                <td>Closed</td>
-            </tr>
-        </table>
+        <div class="day">
+            <span>Monday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Tuesday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Wednesday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Thursday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Friday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Saturday</span>
+            <span>10:45 AM - 12:00 AM</span>
+        </div>
+        <div class="day">
+            <span>Sunday</span>
+            <span>Closed</span>
+        </div>
     </div>
+
 </body>
 
 </html>
