changed home page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <div class="welcome">
         <h1>Welcome to Tech Titan Wings</h1>
         <p>Discover the Best Wings in Town</p>
-        <a href="menu.html" id="button">View Menu</a> <!-- View Menu button -->
     </div>
 
     <!-- About us text -->
@@ -54,8 +53,9 @@
         <p>At Tech Titan Wings, we are passionate about serving the most delicious and mouthwatering wings in the city.
             Our secret recipes and high-quality ingredients make our wings a must-try experience.
             Whether you prefer spicy or mild, boneless or traditional, we have the perfect wing for you.
-            Visit us today and satisfy your wing cravings!
+            View our menu below and satisfy your wing cravings today!
         </p>
+        <a href="menu.html" id="button">View Our Menu</a> <!-- View Menu button -->
     </div>
     
     <footer class="contact-info">
