added state to footer address

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer class="contact-info">
         <div class="footer-content">
           <h2>Contact Information</h2>
-          <p>Address: 308 Negra Arroyo Lane, Albuquerque</p>
+          <p>Address: 308 Negra Arroyo Lane, Albuquerque NM</p>
           <p>Phone: (337) 987-3333</p>
           <p>Email: winglover@techtitanwings.com</p>
         </div>
