Fixed Navbar on all screens and cleaned up CSS

--- a/CartPage.html
+++ b/CartPage.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="css/CartCss.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script src="js/CartJS.js"></script>
 </head>
-
 <body>
     <header>
         <div class="logo">
