Added registration page

--- a/CartPage.html
+++ b/CartPage.html
@@ -16,7 +16,7 @@
                 <img src="img/logo.png" alt="">
             </a>
         </div>
-
+        <!-- Code to link the Navigation Bar -->
         <nav class="nav-bar">
             <ul>
                 <li>
@@ -34,7 +34,12 @@
                             <img src="img/shopping_bag.png" alt="">
                         </a>
                     </div>
-
+                </li>
+                <li>
+                    <a href="register.html" class="register">Register</a>
+                </li>
+                <li>
+                    <a href="signup.html"class="signup">Sign Up</a>
                 </li>
             </ul>
         </nav>
