--- a/contact.html
+++ b/contact.html
@@ -14,29 +14,33 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt=""> <!-- Logo image with a link to the homepage -->
+                <img src="img/logo.png" alt="">
             </a>
         </div>
+        <!-- Code to link the Navigation Bar -->
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="menu.html" class="active">Menu</a> <!-- Menu link with "active" class for styling -->
+                    <a href="menu.html" class="active">Menu</a>
                 </li>
                 <li>
                     <a href="locations.html" class="active">Locations</a>
-                    <!-- Locations link with "active" class for styling -->
                 </li>
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
-                    <!-- Contact Us link with "active" class for styling -->
                 </li>
                 <li>
                     <div class="shopping-bag">
                         <a href="CartPage.html">
                             <img src="img/shopping_bag.png" alt="">
-                            <!-- Shopping bag icon with a link to the shopping cart page -->
                         </a>
                     </div>
+                </li>
+                <li>
+                    <a href="register.html" class="register">Register</a>
+                </li>
+                <li>
+                    <a href="signup.html"class="signup">Sign Up</a>
                 </li>
             </ul>
         </nav>
