--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,12 @@
                             <img src="img/shopping_bag.png" alt="">
                         </a>
                     </div>
-
+                </li>
+                <li>
+                    <a href="register.html" class="register">Register</a>
+                </li>
+                <li>
+                    <a href="signup.html"class="signup">Sign Up</a>
                 </li>
             </ul>
         </nav>
