--- a/CartPage.html
+++ b/CartPage.html
@@ -39,7 +39,7 @@
                     <a href="register.html" class="register">Register</a>
                 </li>
                 <li>
-                    <a href="signup.html"class="signup">Sign Up</a>
+                    <a href="signin.html"class="signin">Sign In</a>
                 </li>
             </ul>
         </nav>
