--- a/order.html
+++ b/order.html
@@ -40,7 +40,7 @@
                     <a href="register.html" class="register">Register</a>
                 </li>
                 <li>
-                    <a href="signup.html"class="signup">Sign Up</a>
+                    <a href="signin.html"class="active">Sign In</a>
                 </li>
             </ul>
         </nav>
