--- a/signin.html
+++ b/signin.html
@@ -58,7 +58,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
 
-        <button type="submit">Register</button>
+        <button type="submit">Sign In</button>
     </form>
 
 </body>
