--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,8 @@
     
         <!-- JavaScript to handle form submissions and display alerts -->
         <script>
-            const reviewForm = document.querySelector('.review-form form');
-            const newsletterForm = document.querySelector('.newsletter-form form');
+            const reviewForm = document.querySelector('.review-form form'); //finds the review-form element
+            const newsletterForm = document.querySelector('.newsletter-form form'); //finds the newsletter-form element
     
             reviewForm.addEventListener('submit', function (event) {
                 event.preventDefault(); // Prevent the form from submitting to the server
