--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
     <script>
         // Get the "View Menu" button element
-        const viewMenuButton = document.querySelector('#button');
+        const viewMenuButton = document.querySelector('#button'); //finds button element
     
         // Add an event listener for mouseover (when the mouse hovers over the button)
         viewMenuButton.addEventListener('mouseover', function() {
