--- a/signin.html
+++ b/signin.html
@@ -51,6 +51,7 @@
 
 <body>
 
+    <!--Sign In Form-->
     <form>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
