--- a/CartPage.html
+++ b/CartPage.html
@@ -11,36 +11,18 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="img/logo.png" alt="">
-            </a>
-        </div>
-        <!-- Code to link the Navigation Bar -->
+        <!-- Navigation Bar -->
         <nav class="nav-bar">
             <ul>
-                <li>
-                    <a href="menu.html" class="active">Menu</a>
-                </li>
-                <li>
-                    <a href="locations.html" class="active">Locations</a>
-                </li>
-                <li>
-                    <a href="contact.html" class="active">Contact Us</a>
-                </li>
-                <li>
-                    <div class="shopping-bag">
-                        <a href="CartPage.html">
-                            <img src="img/shopping_bag.png" alt="">
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <a href="register.html" class="register">Register</a>
-                </li>
-                <li>
-                    <a href="signin.html"class="signin">Sign In</a>
-                </li>
+                <!-- Logo -->
+                <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li>
+                <!-- Navigation Links -->
+                <li class="nav-item"><a href="menu.html" class="active">Menu</a></li>
+                <li class="nav-item"><a href="locations.html" class="active">Locations</a></li>
+                <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li>
+                <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li>
+                <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li>
+                <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li>
             </ul>
         </nav>
     </header>
