--- a/signin.html
+++ b/signin.html
@@ -9,42 +9,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <header>
-    <!-- Code to link the Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="nav-bar">
-
-        <div class="logo">
-            <a href="index.html">
-                <img src="img/logo.png" alt="">
-            </a>
-        </div>
         <ul>
-
-            <li>
-                <a href="menu.html" class="active">Menu</a>
-            </li>
-            <li>
-                <a href="locations.html" class="active">Locations</a>
-            </li>
-            <li>
-                <a href="contact.html" class="active">Contact Us</a>
-            </li>
-            <li>
-                <div class="shopping-bag">
-                    <a href="CartPage.html">
-                        <img src="img/shopping_bag.png" alt="">
-                    </a>
-                </div>
-            </li>
-            <li>
-                <div class="register">
-                    <a href="register.html" class="active">Register</a>
-                </div>
-            </li>
-            <li>
-                <div class="signin">
-                    <a href="signin.html" class="active">Sign In</a>
-                </div>
-            </li>
+            <!-- Logo -->
+            <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li>
+            <!-- Navigation Links -->
+            <li class="nav-item"><a href="menu.html" class="active">Menu</a></li>
+            <li class="nav-item"><a href="locations.html" class="active">Locations</a></li>
+            <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li>
+            <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li>
+            <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li>
+            <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li>
         </ul>
     </nav>
 </header>
