--- a/locations.html
+++ b/locations.html
@@ -2,84 +2,102 @@
 <html lang="en">
 
 <head>
+    <!-- Document metadata: character set and viewport settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the page -->
     <title>Tech Titan Wings</title>
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="css/Locations.css"> <!-- Link CSS stylesheet -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <!-- Link to Google Fonts for font styling -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
 <body>
+    <!-- Page header section -->
     <header>
         <!-- Navigation Bar -->
         <nav class="nav-bar">
             <ul>
-                <!-- Logo -->
-                <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li>
-                <!-- Navigation Links -->
-                <li class="nav-item"><a href="menu.html" class="active">Menu</a></li>
-                <li class="nav-item"><a href="locations.html" class="active">Locations</a></li>
-                <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li>
-                <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li>
-                <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li>
-                <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li>
+               <!-- Logo -->
+               <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li> <!--Home Page-->
+               <!-- Navigation Links -->
+               <li class="nav-item"><a href="menu.html" class="active">Menu</a></li> <!--Menu Page-->
+               <li class="nav-item"><a href="locations.html" class="active">Locations</a></li> <!--Locations Page-->
+               <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li> <!--Contact Us Page-->
+               <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li> <!--Cart Page-->
+               <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li> <!--Register Page-->
+               <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li> <!--Sign In Page-->
             </ul>
         </nav>
     </header>
 
+    <!-- Location information section -->
     <div class="location-group">
         <h1>Our Locations</h1>
 
         <!-- Location information for each branch -->
         <div class="location">
+            <!--Address for Louisiana-->
             <h2>Louisiana</h2>
             <p>454 Washburn Street<br>Baton Rouge, LA 70802<br>Phone: (225) 413-1639</p>
         </div>
 
         <div class="location">
+            <!--Address for Texas-->
             <h2>Texas</h2>
             <p>2430 Patterson Street<br>Houston, TX 77006<br>Phone: (713) 348-5749</p>
         </div>
 
         <div class="location">
+            <!--Address for Colorado-->
             <h2>Colorado</h2>
             <p>3014 Leo Street<br>Englewood, CO 80112<br>Phone: (720) 873-8636</p>
         </div>
 
         <div class="location">
+            <!--Address for Oklahoma-->
             <h2>Oklahoma</h2>
             <p>181 Heather Sees Way<br>Tulsa, OK 74105<br>Phone: (918) 747-1918</p>
         </div>
     </div>
 
+    <!-- Store hours section -->
     <div class="hours-container">
         <h1>Store Hours</h1>
+        <!-- Store hours for each day -->
         <div class="day">
+            <!-- Monday -->
             <span>Monday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Tuesday -->
             <span>Tuesday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Wednesday-->
             <span>Wednesday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Thursday -->
             <span>Thursday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Friday -->
             <span>Friday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Saturday -->
             <span>Saturday</span>
             <span>10:45 AM - 12:00 AM</span>
         </div>
         <div class="day">
+            <!-- Sunday -->
             <span>Sunday</span>
             <span>Closed</span>
         </div>
