--- a/menu.html
+++ b/menu.html
@@ -16,14 +16,14 @@
         <nav class="nav-bar">
             <ul>
                 <!-- Logo -->
-                <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li>
+                <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li> <!--Home Page-->
                 <!-- Navigation Links -->
-                <li class="nav-item"><a href="menu.html" class="active">Menu</a></li>
-                <li class="nav-item"><a href="locations.html" class="active">Locations</a></li>
-                <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li>
-                <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li>
-                <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li>
-                <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li>
+                <li class="nav-item"><a href="menu.html" class="active">Menu</a></li> <!--Menu Page-->
+                <li class="nav-item"><a href="locations.html" class="active">Locations</a></li> <!--Locations Page-->
+                <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li> <!--Contact Us Page-->
+                <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li> <!--Cart Page-->
+                <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li> <!--Register Page-->
+                <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li> <!--Sign In Page-->
             </ul>
         </nav>
     </header>
@@ -32,73 +32,73 @@
         <h1>Menu Items</h1>
     <!-- 1st item -->
         <div>
-            <img src="img/buffalo.jpg" alt="Buffalo Wings">
-            <p><big>Buffalo Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Buffalo Wings')">Add to Cart</button>
+            <img src="img/buffalo.jpg" alt="Buffalo Wings"> 
+            <p><big>Buffalo Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Buffalo Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 2nd item -->
         <div>
             <img src="img/BBQWings.jpg" alt="BBQ Wings">
-            <p><big>BBQ Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('BBQ Wings')">Add to Cart</button>
+            <p><big>BBQ Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('BBQ Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 3rd item -->
         <div>
             <img src="img/GarlicParmesean.jpg" alt="Garlic Parmesean">
-            <p><big>Garlic Parmesean Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Garlic Parmesean Wings')">Add to Cart</button>
+            <p><big>Garlic Parmesean Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Garlic Parmesean Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 4th item -->
         <div>
             <img src="img/Reaper.png" alt="Carolina Reaper Wings">
-            <p><big>Carolina Reaper Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Carolina Reaper Wings')">Add to Cart</button>
+            <p><big>Carolina Reaper Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Carolina Reaper Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 5th item -->
         <div>
             <img src="img/Cajun.png" alt="Cajun Wings">
-            <p><big>Cajun Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Cajun Wings')">Add to Cart</button>
+            <p><big>Cajun Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Cajun Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 6th item -->
         <div>
-            <img src="img/Ghost.jpg" alt="Ghost Pepper Wings">
-            <p><big>Ghost Pepper Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Ghost Pepper Wings')">Add to Cart</button>
+            <img src="img/Ghost.jpg" alt="Ghost Pepper Wings"> 
+            <p><big>Ghost Pepper Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Ghost Pepper Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
     <!-- 7th item -->
         <div>
             <img src="img/Plain.jpg" alt="Plain Wings">
-            <p><big>Plain Wings</big></p>
-            <big>Price: $8.99</big>
-            <button class="addToCartButton" onclick="addToCart('Plain Wings')">Add to Cart</button>
+            <p><big>Plain Wings</big></p> <!--Title of Menu Item-->
+            <big>Price: $8.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Plain Wings')">Add to Cart</button> <!--Add to cart button-->
         </div>
         <!-- 8th item -->
         <div>
             <img src="img/Combo1.jpg" alt="Wings Combo 1">
-            <p><big>Wings Combo 1</big></p>
-            <big>Price: $29.99</big>
-            <button class="addToCartButton" onclick="addToCart('Wings Combo 1')">Add to Cart</button>
+            <p><big>Wings Combo 1</big></p> <!--Title of Menu Item-->
+            <big>Price: $29.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Wings Combo 1')">Add to Cart</button> <!--Add to cart button-->
         </div>
         <!-- 9th item -->
         <div>
             <img src="img/Combo2.jpg" alt="Wings Combo 2">
-            <p><big>Wings Combo 2</big></p>
-            <big>Price: $19.99</big>
-            <button class="addToCartButton" onclick="addToCart('Wings Combo 2')">Add to Cart</button>
+            <p><big>Wings Combo 2</big></p> <!--Title of Menu Item-->
+            <big>Price: $19.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Wings Combo 2')">Add to Cart</button>  <!--Add to cart button-->
         </div>
         <!-- 10th item -->
         <div>
             <img src="img/Combo3.jpg" alt="Wings Combo 3">
-            <p><big>Wings Combo 3</big></p>
-            <big>Price: $13.99</big>
-            <button class="addToCartButton" onclick="addToCart('Wings Combo 3')">Add to Cart</button>
+            <p><big>Wings Combo 3</big></p> <!--Title of Menu Item-->
+            <big>Price: $13.99</big> <!--Price of Item-->
+            <button class="addToCartButton" onclick="addToCart('Wings Combo 3')">Add to Cart</button> <!--Add to cart button-->
         </div>
     </div>
 </body>
