--- a/register.html
+++ b/register.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Document metadata: character set and viewport settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Title of the page -->
     <title>Registration Form</title>
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="css/Register.css">
+    <!-- Link to external JavaScript file for behavior -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
@@ -14,14 +18,14 @@
     <nav class="nav-bar">
         <ul>
             <!-- Logo -->
-            <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li>
+            <li><div class="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div></li> <!--Home Page-->
             <!-- Navigation Links -->
-            <li class="nav-item"><a href="menu.html" class="active">Menu</a></li>
-            <li class="nav-item"><a href="locations.html" class="active">Locations</a></li>
-            <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li>
-            <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li>
-            <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li>
-            <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li>
+            <li class="nav-item"><a href="menu.html" class="active">Menu</a></li> <!--Menu Page-->
+            <li class="nav-item"><a href="locations.html" class="active">Locations</a></li> <!--Locations Page-->
+            <li class="nav-item"><a href="contact.html" class="active">Contact Us</a></li> <!--Contact Us Page-->
+            <li class="nav-item"><div class="shopping-bag"><a href="CartPage.html"><img src="img/shopping_bag.png" alt=""></a></div></li> <!--Cart Page-->
+            <li class="nav-item"><div class="register"><a href="register.html" class="active">Register</a></div></li> <!--Register Page-->
+            <li class="nav-item"><div class="signin"><a href="signin.html" class="active">Sign In</a></div></li> <!--Sign In Page-->
         </ul>
     </nav>
 </header>
